[gd_scene load_steps=23 format=3 uid="uid://cnjasm4c8dher"]

[ext_resource type="Script" path="res://Frog.gd" id="1_hubyt"]
[ext_resource type="Texture2D" uid="uid://dr2c6r4232jnm" path="res://resources/spritesheets/enemy-deadth.png" id="2_auqjs"]
[ext_resource type="Texture2D" uid="uid://d2dbwaqanp143" path="res://resources/spritesheets/frog-idle.png" id="3_a1peq"]
[ext_resource type="Texture2D" uid="uid://dmbj68syluwgn" path="res://resources/spritesheets/frog-jump.png" id="4_mta7k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjjos"]
size = Vector2(23.5, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbmdm"]
atlas = ExtResource("2_auqjs")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkcdc"]
atlas = ExtResource("2_auqjs")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xm8l"]
atlas = ExtResource("2_auqjs")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4j78"]
atlas = ExtResource("2_auqjs")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v3cd"]
atlas = ExtResource("2_auqjs")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kqbn"]
atlas = ExtResource("2_auqjs")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_va8sj"]
atlas = ExtResource("3_a1peq")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3m4o7"]
atlas = ExtResource("3_a1peq")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fvws"]
atlas = ExtResource("3_a1peq")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fni2h"]
atlas = ExtResource("3_a1peq")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mwu4"]
atlas = ExtResource("4_mta7k")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lskl"]
atlas = ExtResource("4_mta7k")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k8ur"]
atlas = ExtResource("4_mta7k")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yjvcq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbmdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkcdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xm8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4j78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v3cd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kqbn")
}],
"loop": false,
"name": &"Death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_va8sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m4o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fvws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fni2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va8sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va8sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va8sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va8sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va8sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va8sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va8sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va8sj")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mwu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lskl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k8ur")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fmmvg"]
radius = 128.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a570k"]
size = Vector2(19.9375, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xyedf"]
size = Vector2(24.5, 4)

[node name="Frog" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_hubyt")

[node name="SelfMask" type="CollisionShape2D" parent="."]
position = Vector2(-0.75, -7)
shape = SubResource("RectangleShape2D_tjjos")
metadata/_edit_lock_ = true

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_yjvcq")
animation = &"Idle"
metadata/_edit_lock_ = true

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false

[node name="PlayerDetectionMask" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_fmmvg")

[node name="PlayerStomp" type="Area2D" parent="."]

[node name="PlayerStompMask" type="CollisionShape2D" parent="PlayerStomp"]
position = Vector2(-0.96875, -14.5)
shape = SubResource("RectangleShape2D_a570k")

[node name="PlayerHurt" type="Area2D" parent="."]

[node name="PlayerHurtMask" type="CollisionShape2D" parent="PlayerHurt"]
position = Vector2(-0.75, -1)
shape = SubResource("RectangleShape2D_xyedf")

[connection signal="animation_finished" from="Sprite" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerStomp" to="." method="_on_player_stomp_body_entered"]
[connection signal="body_exited" from="PlayerStomp" to="." method="_on_player_stomp_body_exited"]
[connection signal="body_entered" from="PlayerHurt" to="." method="_on_player_hurt_body_entered"]
